[project]
name = "edu_app"
authors = [
    { name = "Ashfaque Mustakim Ansari", email = "ashfaque2407@gmail.com"}
]
description = "We will be adding extra features and modules to improve the ERPNext education module. These additions will fill gaps that are currently not covered."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
